# OAK-D-Pro-point-cloud-collector

./: .gitignore  README.md  package.xml  pclod.py  setup.cfg  setup.py
launch/: snapshot.launch.py
oak_cloud_collector/: ply_writer.py  snapshot_node.py
