<?xml version="1.0"?>
<package format="3">
  <name>oak_cloud_collector</name>
  <version>0.1.0</version>
  <description>ROS 2 PointCloud2 snapshot tool for OAK-D Pro: PLY + JSON metadata.</description>
  <maintainer email="">vktrbot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
